<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlaceYourOrderActivity"
    android:paddingBottom="10dp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#673AB7">


        <TextView
            android:id="@+id/tvCustomerDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/customer_details"
            android:textColor="#131212"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/inputName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="05dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="05dp"
            android:hint="@string/enter_your_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvCustomerDetails" />

        <EditText
            android:id="@+id/inputAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="05dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="05dp"
            android:hint="@string/enter_your_address"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputName" />

        <EditText
            android:id="@+id/inputCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="05dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="05dp"
            android:hint="@string/enter_your_city"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputAddress" />

        <EditText
            android:id="@+id/inputState"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="05dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="05dp"
            android:hint="@string/enter_your_state"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputCity" />

        <EditText
            android:id="@+id/inputZip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="05dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="05dp"
            android:hint="@string/enter_your_zip"
            android:inputType="number"
            android:maxLength="6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputState" />

        <TextView
            android:id="@+id/tvCardDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/card_details"
            android:textColor="#100F0F"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputZip" />

        <EditText
            android:id="@+id/inputCardNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="05dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="05dp"
            android:hint="@string/enter_card_number"
            android:inputType="number"
            android:maxLength="16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvCardDetails" />

        <EditText
            android:id="@+id/inputCardExpiry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="05dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/enter_card_expiry_mm_yyyy"
            android:maxLength="6"
            android:textColor="#CBFFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputCardNumber" />

        <EditText
            android:id="@+id/inputCardPin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="05dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/enter_card_pin_3_digits"
            android:inputType="number"
            android:maxLength="3"
            android:textColor="#DAFFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputCardExpiry"
            tools:ignore="TextFields" />

        <TextView
            android:id="@+id/tvTotalItems"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/total_items_in_cart"
            android:textColor="#090808"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputCardPin" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/cartItemsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTotalItems" />

        <TextView
            android:id="@+id/tvSubtotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/sub_total"
            android:textColor="#DAF8EDED"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cartItemsRecyclerView" />

        <TextView
            android:id="@+id/tvSubtotalAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="Rs. 0.0"
            android:textColor="#D7FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cartItemsRecyclerView" />

        <TextView
            android:id="@+id/tvDeliveryCharge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/delivery_charge"
            android:textColor="#EDE5E5"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSubtotal" />

        <TextView
            android:id="@+id/tvDeliveryChargeAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/rs_0_0"
            android:textColor="#DFFFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSubtotal" />

        <TextView
            android:id="@+id/tvTotal"
            android:layout_width="32dp"
            android:layout_height="21dp"
            android:layout_margin="10dp"
            android:text="@string/total"
            android:textColor="#FDF5F5"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDeliveryCharge" />

        <TextView
            android:id="@+id/tvTotalAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="Rs. 0.0"
            android:textColor="#EEFFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDeliveryCharge" />

        <TextView
            android:id="@+id/buttonPlaceYourOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="28dp"
            android:background="@drawable/button_bg"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/place_your_order"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.473"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTotal" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>